Update Tela Lista de Compra.html

--- a/Tela Lista de Compra.html
+++ b/Tela Lista de Compra.html
@@ -12,26 +12,25 @@
         <br><br>
         <fieldset class="compra">
             <ul>
-                <li><input type="text" id="IDespaco1" name="espaco1"></li>
-                <br>
-                <li><input type="text" id="IDespaco2" name="espaco2"></li>
-                <li><input type="text" id="IDespaco3" name="espaco3"></li>
-                <li><input type="text" id="IDespaco4" name="espaco4"></li>
-                <li><input type="text" id="IDespaco5" name="espaco5"></li>
-                <li><input type="text" id="IDespaco6" name="espaco6"></li>
-                <li><input type="text" id="IDespaco7" name="espaco7"></li>
-                <li><input type="text" id="IDespaco8" name="espaco8"></li>
-                <li><input type="text" id="IDespaco9" name="espaco9"></li>
-                <li><input type="text" id="IDespaco10" name="espaco10"></li>
-                <li><input type="text" id="IDespaco12" name="espaco12"></li>
-                <li><input type="text" id="IDespaco13" name="espaco13"></li>
-                <li><input type="text" id="IDespaco14" name="espaco14"></li>
-                <li><input type="text" id="IDespaco15" name="espaco15"></li>
-                <li><input type="text" id="IDespaco16" name="espaco16"></li>
-                <li><input type="text" id="IDespaco17" name="espaco17"></li>
-                <li><input type="text" id="IDespaco18" name="espaco18"></li>
-                <li><input type="text" id="IDespaco19" name="espaco19"></li>
-                <li><input type="text" id="IDespaco20" name="espaco20"></li>
+                <li><input type="text" id="IDespaco1" name="espaco1"></li><br>
+                <li><input type="text" id="IDespaco2" name="espaco2"></li><br>
+                <li><input type="text" id="IDespaco3" name="espaco3"></li><br>
+                <li><input type="text" id="IDespaco4" name="espaco4"></li><br>
+                <li><input type="text" id="IDespaco5" name="espaco5"></li><br>
+                <li><input type="text" id="IDespaco6" name="espaco6"></li><br>
+                <li><input type="text" id="IDespaco7" name="espaco7"></li><br>
+                <li><input type="text" id="IDespaco8" name="espaco8"></li><br>
+                <li><input type="text" id="IDespaco9" name="espaco9"></li><br>
+                <li><input type="text" id="IDespaco10" name="espaco10"></li><br>
+                <li><input type="text" id="IDespaco12" name="espaco12"></li><br>
+                <li><input type="text" id="IDespaco13" name="espaco13"></li><br>
+                <li><input type="text" id="IDespaco14" name="espaco14"></li><br>
+                <li><input type="text" id="IDespaco15" name="espaco15"></li><br>
+                <li><input type="text" id="IDespaco16" name="espaco16"></li><br>
+                <li><input type="text" id="IDespaco17" name="espaco17"></li><br>
+                <li><input type="text" id="IDespaco18" name="espaco18"></li><br>
+                <li><input type="text" id="IDespaco19" name="espaco19"></li><br>
+                <li><input type="text" id="IDespaco20" name="espaco20"></li><br>
             </ul>
         </fieldset>
     </body>
